fix: change drawer layout to not overlap map

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -6,12 +6,14 @@
   }
 
   body {
-    display: grid;
-
+    display: flex;
+    
     font-family: var(--font-body);
     font-size: var(--font-size-base);
     
     color: var(--color-neutral);
+    
+    overflow: hidden;
   }
 
   h1, h2, h3, h4 {
