--- a/assets/css/drawer.css
+++ b/assets/css/drawer.css
@@ -2,34 +2,41 @@
   .drawer {
     display: flex;
     flex-direction: column;
-    position: fixed;
-    inset-block-start: 0;
-    inset-inline-start: 0;
+    position: relative;
+    flex: 0 0 var(--drawer-width);
     inline-size: var(--drawer-width);
-    block-size: 100%;
+    block-size: 100dvh;
     
     background-color: var(--color-white);
 
-    border-block-start: 10px solid;
+    border-block-start: var(--drawer-border-width) solid;
     border-image: linear-gradient(to right, var(--color-primary-light), var(--color-purple)) 1;
     box-shadow: var(--drawer-shadow);
     
     z-index: 2;
-    transition: translate var(--transition-speed);
+    transition: margin-inline-start var(--transition-speed);
   
     @media (width > 768px) {
       &:not(.open) {
-        translate: calc(-1 * var(--drawer-width)) 0;
+        margin-inline-start: calc(-1 * var(--drawer-width));
       }
     }
   
     @media (width < 768px) {
+      flex-basis: 100%;
       inline-size: 100%;
 
       &:not(.open) {
-        translate: -100% 0;
+        margin-inline-start: calc(-100% - var(--drawer-border-width));
       }
     }
+  }
+
+  #main-content {
+    position: relative;
+    flex: 1 1 auto;
+    min-inline-size: 0;
+    block-size: 100dvh;
   }
 
   .drawer-header {
@@ -106,9 +113,10 @@
     align-items: center;
     justify-content: center;
     gap: 0.25rem;
-    position: fixed;
-    inset-block-start: calc(var(--header-height) - var(--block-size) + var(--drawer-border-width));
-    inset-inline-start: 0;
+    position: absolute;
+    inset-inline-start: 100%;
+    align-self: flex-start;
+    margin-block-start: calc(var(--header-height) - var(--block-size));
     padding-inline: 0.25rem 0.5rem;
     block-size: var(--block-size);
   
@@ -126,8 +134,7 @@
 
     appearance: none;
     cursor: pointer;
-    transition: inset-inline-start var(--transition-speed),
-      background-color var(--transition-speed);
+    transition: background-color var(--transition-speed);
   
     &:hover {
       background-color: var(--color-primary-light);
@@ -140,8 +147,6 @@
 
     @media (width > 768px) {
       &.drawer-open {
-        inset-inline-start: var(--drawer-width);
-        
         svg {
           rotate: 180deg;
         }
@@ -154,11 +159,8 @@
       }
 
       &:not(.drawer-open) {
-        inset-block-start: auto;
-        inset-block-end: 1rem;
-        inset-inline-start: 1rem;
+        inset-block-end: 2rem;
         padding: 0.75rem 1rem;
-        gap: 0.375rem;
         box-shadow: 0 4px 16px oklch(0% 0 0 / 0.25);
       }
     }
