--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -28,6 +28,7 @@
   .split {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    inline-size: 100%;
   }
 
   .panel {
